Revise game description and add features list
Updated game description and features in the HTML.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
             <div class="game-grid">
                 <div class="game-info">
                     <h2>About</h2>
-                    <div id="steam-widget"></div>
                     <div id="custom-description">
-                        <!-- Users can manually add text here in HTML if they want more detail -->
-                        <p>SCOPECREEP is a psychological horror incremental experience where every click draws you deeper into the flame.</p>
+                        <p>
+                            Fight wandering spirits and harvest their essences.</br>                    
+                            Delve deeper into the void with unique upgrades.</br>                    
+                            Uncover the secrets buried in the shadows.
+                        </p>                    
+                        <h3>Features</h3>
+                        <ul>
+                            <li>Vast upgrade system</li>
+                            <li>Simple, addicting combat</li>
+                            <li>Moody, ambient soundtrack</li>
+                            <li>Short, incremental experience</li>
+                        </ul>
                     </div>
+                     <div id="steam-widget"></div>
                 </div>
                 <div class="game-facts">
                     <h2>Fact sheet</h2>
@@ -80,4 +90,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
